# olg

./: .gitignore  .pre-commit-config.yaml  6_3_リスクとライフサイクル_グリッドサーチ_高速化版.ipynb  Dockerfile  K_path.npy  README.md  assemble.ipynb  docker-compose.yml  main.ipynb  main.py  olg_process_reference.ipynb  psuede_code.md  pyproject.toml  requirements.txt  visualize.ipynb
.devcontainer/: devcontainer.json
cev_solver/: __init__.py  cev_analysis.py  cev_calculator.py
olg/: __init__.py
olg/cev/: __init__.py  cev_analysis.py  cev_calculator.py  cev_plotter.py
olg/ss/: __init__.py  asset_supply.py  distribution_updater.py  household_solver.py  plot_asset_path.py  setting.py  solve_ss.py  steady_state_result.py  utils.py
olg/transition/: __init__.py  backward.py  capital_guess.py  forward.py  main.py  market_clearing.py  setting.py  transition_solver.py
olg_solver/: __init__.py  asset_supply.py  distribution_updater.py  household_solver.py  plot_asset_path.py  setting.py  solve_ss.py  steady_state_result.py  transition_setting.py  utils.py
olg_transition_solver/: K_path.npy  __init__.py  backward_transition.py  capital_guess.py  forward_transition.py  main.py  market_clearing.py  transition_solver.py
results/results_20251108_114241/: psi_50to25_by25T_K_path.pkl  psi_50to25_by25T_final_result.pkl  psi_50to25_by25T_initial_result.pkl
src/: K_path.pkl  assemble.ipynb  comparison_cev.ipynb  compute_ss_by_several_psi.py  compute_steady_states.py  main.ipynb  main.py  run_pension_scenarios.py  test.ipynb  visualize.ipynb
src/results/psi_50to00/: K_path.pkl  (+2 more)
(+129 files in other folders)
