[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "olg_kitao_and_sunakawa_yamada_2024_chapter6"
version = "0.1.0"
description = "OLG model library"
requires-python = ">=3.8"
dependencies = [
    "interpolation",
    "jupyter",
    "matplotlib",
    "numba",
    "numpy",
    "pandas",
    "quantecon",
    "ruff",
    "seaborn>=0.13.2",
    "pre-commit",
    "japanize-matplotlib>=1.1.3",
]

[tool.setuptools]
packages = ["olg"]

[tool.ruff]
line-length = 88
lint.select = ["E", "F"]
lint.ignore = ["E203"]

[tool.black]
line-length = 88
